# File-Integrity-Checker

./: .gitignore  README.md  integrity-check.py  pyproject.toml
.github/workflows/: ci.yaml  ci.yml
integrity_checker/: cli.py
